# vibenalytics

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: release.yml
docs/: sync-pipeline.md  todo.md
src/: aggregation.rs  auth.rs  config.rs  group.rs  hash.rs  http.rs  import.rs  log_cmd.rs  main.rs  paths.rs  projects.rs  sync.rs  transcripts.rs  tui.rs  update.rs
src/tui/: dashboard.rs  header.rs  import_picker.rs  mod.rs  onboarding.rs  overlay.rs  projects.rs  sessions.rs  settings.rs  theme.rs
