[package]
name = "claudnalytics"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
gethostname = "0.4"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
opt-level = "s"
lto = true
strip = true
