[package]
name = "vibenalytics"
version = "0.0.0-dev"
edition = "2021"
description = "Usage analytics CLI for Claude Code"
license = "MIT"
repository = "https://github.com/vibenalytics/vibenalytics"
homepage = "https://vibenalytics.dev"
readme = "README.md"
keywords = ["claude-code", "analytics", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = "0.4"
iana-time-zone = "0.1"
ratatui = "0.29"
crossterm = "0.28"
open = "5"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
